exercises/service-discovery-networking/deployment2.yaml
# First, let's add something unique to each pod so we can identify them
# We'll create a custom nginx config that shows the pod name

apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
        command: ["/bin/sh", "-c"]
        args:
        - |
          echo "<h1>Pod: $POD_NAME</h1><p>IP: $POD_IP</p>" > /usr/share/nginx/html/index.html
          nginx -g 'daemon off;'
